--- a/react-frontend/src/Components/TextFields.css
+++ b/react-frontend/src/Components/TextFields.css
@@ -47,8 +47,15 @@
   }
   
   .select-text-field {
-    width: 200px;
+    width: 420px;
+    height: 40px;
+    background-color: #eeeeee;
+    border-radius: 10px;
+    border: 0;
+    padding: 10px;
+    margin-right: 30px;
   }
+  
 
   @media screen and (max-width: 492px) {
     .large-text-field{
@@ -57,5 +64,9 @@
 
     .password-input{
         width: 300px;
+    }
+
+    .select-text-field {
+         width: 320px;
     }
   }
