--- a/react-frontend/src/Pages/Navbar.css
+++ b/react-frontend/src/Pages/Navbar.css
@@ -1,9 +1,16 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
+
 .navbar-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 20vw;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 20vw;
+  position: relative;
+}
   
   .navbar-container-one {
     display: flex;
@@ -49,57 +56,89 @@
     margin-right: 10px;
   }
 
-
-.toggle-nav-btn {
+  .toggle-nav-btn {
     display: none; 
-}
-  
-@media screen and (max-width: 1024px) {
-    .navbar-container-two {
-    padding-left: 10px;
-    }
-}
-
-
-  @media screen and (max-width: 768px) {
-    .navbar-container {
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-       width: 100%;
-      }
-    .toggle-nav-btn {
-      display: block;
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 20px;
-      cursor: pointer;
-      background: none;
-      border: none;
-      outline: none;
-    }
-  
-    .navbar-container-one,
-    .navbar-container-two {
-      display: none;
-    }
-  
-    .navbar-container-one.visible{
-        display: flex; 
-      flex-direction: column;
-      width: 100%;
-      align-items: center;
-      padding: 20px 0 0 20px;
-    }
-    .navbar-container-two.visible {
-      display: flex; 
-      flex-direction: column;
-      width: 100%;
-      align-items: flex-start;
-      background-color: rgba(245, 213, 174, 0.8);
-      padding: 20px 0 0 20px;
-    }
   }
   
-   
+  .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the transparency as needed */
+    z-index: 1000; /* Set a high z-index to ensure it's above other elements */
+  }
+  
+  .overlay.visible {
+    display: block;
+  }
+  
+  @media screen and (max-width: 1366px) {
+
+    .navbar-container {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      width: 100vw;
+      position: relative;
+    }
+    .navbar-container-two {
+      padding: 30px;
+    }
+  }
+
+
+@media screen and (max-width: 768px) {
+  .navbar-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100vw;
+    position: relative;
+    z-index: 1001; 
+  }
+
+  .toggle-nav-btn {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    z-index: 1004; 
+  }
+
+  .navbar-container-one,
+  .navbar-container-two {
+    display: none;
+    position: fixed;
+    width: 100vw;
+  }
+
+  .navbar-container-one.visible,
+  .navbar-container-two.visible {
+    display: flex;
+    position: fixed;
+    width: 100vw;
+    z-index: 1003; 
+  }
+
+  .navbar-container-one.visible {
+    top: 0;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0 0 20px;
+  }
+
+  .navbar-container-two.visible {
+    align-items: flex-start;
+    background-color: rgba(245, 213, 174, 0.8);
+    padding: 20px 0 0 20px;
+    bottom: 0;
+  }
+}
