--- a/react-frontend/src/Components/TextFields.css
+++ b/react-frontend/src/Components/TextFields.css
@@ -9,7 +9,7 @@
   .medium-text-field {
     width: 200px;
     height: 25px;
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
     border-radius: 5px;
     border: 0;
     padding: 5px;
