--- a/react-frontend/src/Pages/DoctorRegisterStyles.css
+++ b/react-frontend/src/Pages/DoctorRegisterStyles.css
@@ -100,6 +100,10 @@
     border-radius: 10px;
   }
 
+  .signup-button:hover{
+    background-color: #903e00; 
+  }
+
   label {
     border: 1px solid black;
     padding: 4px;
