--- a/react-frontend/src/Pages/Navbar.css
+++ b/react-frontend/src/Pages/Navbar.css
@@ -20,9 +20,15 @@ body, html {
     background-color: var(--primary-color);
     height: 30%;
   }
+
+  .nav-image{
+    height: 100px;
+    width: 100px;
+  }
   
   .doctor-details {
     color: rgb(255, 255, 255);
+    margin-bottom: 0;
   }
   
   .navbar-container-two {
@@ -80,9 +86,12 @@ body, html {
     .navbar-container {
       display: flex;
       flex-direction: column;
-      height: 100vh;
-      width: 100vw;
+      min-height: 100vh;
       position: relative;
+    }
+
+    .navbar-container-one{
+      padding: 20px;
     }
     .navbar-container-two {
       padding: 30px;
