--- a/react-frontend/src/Pages/DoctorProfile.css
+++ b/react-frontend/src/Pages/DoctorProfile.css
@@ -124,7 +124,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-bottom: 0;
+      padding: 0;
     }
   
     .user-image {
