--- a/react-frontend/src/Pages/PatientRegister.css
+++ b/react-frontend/src/Pages/PatientRegister.css
@@ -53,6 +53,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0;
     }
     .patient-container {
       flex-direction: column;
