--- a/react-frontend/src/Pages/Navbar.css
+++ b/react-frontend/src/Pages/Navbar.css
@@ -8,7 +8,8 @@ body, html {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 20vw;
+  width: 20vw; 
+  max-width: 300px; 
   position: relative;
 }
   
@@ -119,7 +120,7 @@ body, html {
     background: none;
     border: none;
     outline: none;
-    z-index: 1004; 
+    z-index: 1004;
   }
 
   .navbar-container-one,
