--- a/react-frontend/src/Pages/Dashboard.css
+++ b/react-frontend/src/Pages/Dashboard.css
@@ -1,7 +1,6 @@
 .dashboard-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     height: 100%;
     width: 100%;
     padding: 10px;
@@ -12,7 +11,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    margin: 50px;
+    margin: 20px 50px;
     padding: 50px;
     height: 10vh;
     width: 80%;
@@ -41,7 +40,7 @@
   }
   
   .dashboard-container-two img {
-    height: 300px;
+    height: 250px;
     width: auto;
   }
   
@@ -57,7 +56,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 50px;
+    padding: 10px 50px;
     width: 80%;
     margin-left: 40px;
   }
@@ -133,7 +132,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0px;
+    margin: 30px 0px;
   }
 
   .dashboard-container-two img {
@@ -149,13 +148,14 @@
 
   .dashboard-container-three {
     margin-left: 0;
+    margin-top: 20px;
   }
 
   .dashboard-header {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   .dashboard-header a {
@@ -167,6 +167,6 @@
   }
 
   .patient-table {
-    margin-top: 10px;
+    margin-top: 5px;
   }
 }
