--- a/react-frontend/src/Pages/Navbar.css
+++ b/react-frontend/src/Pages/Navbar.css
@@ -43,7 +43,7 @@ body, html {
   
   .nav-link {
     text-decoration: none;
-    color: #333;
+    color: rgb(35, 35, 35);
     margin: 20px 0;
     display: flex;
     align-items: center;
@@ -52,7 +52,8 @@ body, html {
   }
   
   .nav-link:hover {
-    color: var(--primary-color); 
+    color: rgb(0, 0, 0); 
+   transform: scale(1.05);
   }
   
   .nav-link span {
@@ -62,6 +63,10 @@ body, html {
   .nav-link svg {
     margin-right: 10px;
   }
+
+  .nav-link.active-link {
+    color: var(--primary-color);
+  }  
 
   .toggle-nav-btn {
     display: none; 
