--- a/react-frontend/src/Pages/PatientList.css
+++ b/react-frontend/src/Pages/PatientList.css
@@ -52,14 +52,17 @@ input {
   }
 
   @media (max-width: 768px) {
-
   
     .list-container{
         display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0;
-    background-color: aliceblue;
+    padding-top: 0;
+    }
+
+    .list-container h1{
+      margin-top: 0;
+      padding-top: 0;
     }
 
     .search-bar {
