--- a/angular-frontend/src/components/textfields/textfields.component.html
+++ b/angular-frontend/src/components/textfields/textfields.component.html
@@ -1,1 +1,10 @@
-<input type="text" class="text-field" />
+<!-- <input
+  type="text"
+  [placeholder]="placeholder"
+  [(ngModel)]="value"
+  (ngModelChange)="onChange($event)"
+/> -->
+
+<input type="text" class="small-text-field" [placeholder]="placeholder" />
+<input type="text" class="medium-text-field" [placeholder]="placeholder" />
+<input type="text" class="large-text-field" [placeholder]="placeholder" />
