--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1 class="title">e-medical app</h1>
-<h2>welcome</h2>
-<app-textfields></app-textfields>
+<h2>Welcomeee</h2>
+<app-textfields [placeholder]="'Enter small text...'"></app-textfields>
