--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1 class="title">e-medical app</h1>
-<h2>Welcomeee</h2>
-<app-textfields [placeholder]="'Enter small text...'"></app-textfields>
+<!-- <app-textfields size="sm" [placeholder]="'Small Text'"></app-textfields>
+<app-textfields size="md" [placeholder]="'Medium Text'"></app-textfields> -->
+
+<!-- <app-textfields [placeholder]="'Enter Text'"></app-textfields> -->
+
+<router-outlet></router-outlet>
