--- a/angular-frontend/src/components/textfields/textfields.component.html
+++ b/angular-frontend/src/components/textfields/textfields.component.html
@@ -5,6 +5,11 @@
   (ngModelChange)="onChange($event)"
 /> -->
 
-<input type="text" class="small-text-field" [placeholder]="placeholder" />
-<input type="text" class="medium-text-field" [placeholder]="placeholder" />
+<!-- <div *ngIf="size === 'sm'">
+  <input type="text" class="small-text-field" [placeholder]="placeholder" />
+</div>
+<div *ngIf="size === 'md'">
+  <input type="text" class="medium-text-field" [placeholder]="placeholder" />
+</div> -->
+
 <input type="text" class="large-text-field" [placeholder]="placeholder" />
