--- a/angular-frontend/src/components/textfields/textfields.component.css
+++ b/angular-frontend/src/components/textfields/textfields.component.css
@@ -23,3 +23,27 @@
     border: 0;
     padding: 10px;
 }
+
+.password-input-container {
+    position: absolute;
+    margin-bottom: 10px;
+}
+
+.password-input{
+    position: relative;
+    width: 400px;
+    height: 20px;
+    background-color: #eeeeee;
+    border-radius: 10px;
+    border: 0;
+    padding: 10px;
+}
+
+.password-toggle {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    
+}
