--- a/angular-frontend/src/components/textfields/textfields.component.css
+++ b/angular-frontend/src/components/textfields/textfields.component.css
@@ -25,7 +25,7 @@
 }
 
 .password-input-container {
-    position: absolute;
+    position: relative;
     margin-bottom: 10px;
 }
 
@@ -45,5 +45,15 @@
     right: 10px;
     transform: translateY(-50%);
     cursor: pointer;
-    
 }
+
+ @media screen and (max-width: 492px) {
+     .large-text-field {
+         width: 350px;
+     }
+
+     .password-input {
+         width: 350px;
+     }
+
+    }
