--- a/angular-frontend/src/components/textfields/textfields.component.css
+++ b/angular-frontend/src/components/textfields/textfields.component.css
@@ -57,3 +57,15 @@
      }
 
     }
+
+@media (max-width: 375px) {
+.large-text-field {
+        width: 200px;
+        height: 20px;
+    }
+
+    .password-input {
+        width: 200px;
+        height: 20px;
+    }
+}
