--- a/angular-frontend/src/app/pages/navbar/navbar.component.html
+++ b/angular-frontend/src/app/pages/navbar/navbar.component.html
@@ -16,7 +16,7 @@
 
   <div class="navbar-container-two" [class.visible]="isNavVisible">
     <a
-      (click)="navigateToDoctorSignin()"
+      (click)="navigateToDashboard()"
       class="nav-link"
       [class.active-link]="activeLink === '/dashboard'"
       (click)="closeNav()"
