--- a/angular-frontend/src/app/layout/layout/layout.component.css
+++ b/angular-frontend/src/app/layout/layout/layout.component.css
@@ -4,11 +4,24 @@
     align-items: flex-start;
 }
 
-.main-content{
+
+.navbar-wrapper {
+    display: flex;
+    height: 100vh;
+    min-height: 100%;
+    width: 25vw;
+    position: relative;
+    overflow-y: auto;
+    padding: 0;
+    margin: 0;
+}
+
+.main-content {
+    height: calc(100vh - 2rem);
     width: 100%;
-    height: 100%;
-    padding: 20px;
-    padding-bottom: 0;
+    overflow-y: auto;
+    padding: 0;
+    margin: 0;
 }
 
 @media (max-width: 768px) {
@@ -29,10 +42,20 @@
 
     .main-content {
         display: flex;
+        height: 100%;
         align-items: center;
         justify-content: center;
-        margin-top: 50px;
-        margin-left: 50px;
      
+    }
+}
+@media (max-width: 375px) {
+
+    .main-content {
+
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        width: auto;
+        padding: 0 100px;
     }
 }
