doctor profile created

--- a/angular-frontend/src/app/pages/navbar/navbar.component.html
+++ b/angular-frontend/src/app/pages/navbar/navbar.component.html
@@ -28,9 +28,9 @@
     </a>
 
     <a
-      (click)="navigateToDoctorSignin()"
+      (click)="navigateToDoctorProfile()"
       class="nav-link"
-      [class.active-link]="activeLink === '/navbar'"
+      [class.active-link]="activeLink === '/doctor-profile'"
       (click)="closeNav()"
     >
       <div class="icon-text-container">
