--- a/angular-frontend/src/app/layout/layout/layout.component.css
+++ b/angular-frontend/src/app/layout/layout/layout.component.css
@@ -4,18 +4,6 @@
     align-items: flex-start;
 }
 
-
-.navbar-wrapper {
-    display: flex;
-    height: 100vh;
-    min-height: 100%;
-    width: 21vw;
-    position: relative;
-    overflow-y: auto;
-    padding: 0;
-    margin: 0;
-}
-
 .main-content {
     height: calc(100vh - 2rem);
     width: 100%;
@@ -24,38 +12,33 @@
     margin: 0;
 }
 
+@media screen and (max-width: 1366px) {
+    .main-content {
+    width: auto;
+    }
+}
+
 @media (max-width: 768px) {
 
     .content{
         align-items: center;
         justify-content: center;
-
     }
-    .navbar-wrapper {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 1000;
-        display: block;
-    }
-
     .main-content {
         display: flex;
         height: 100%;
         align-items: center;
         justify-content: center;
-     
+        padding: 20px 20px 20px 75px;
     }
 }
 @media (max-width: 375px) {
 
     .main-content {
-
     display: flex;
         align-items: center;
         justify-content: center;
         width: auto;
-        padding: 0 100px;
+        padding-left: 50px;
     }
 }
