--- a/angular-frontend/src/app/pages/navbar/navbar.component.css
+++ b/angular-frontend/src/app/pages/navbar/navbar.component.css
@@ -121,13 +121,14 @@
         flex-direction: column;
         position: relative;
         z-index: 1001;
+        width: auto;
     }
 
     .toggle-nav-btn {
         display: block;
-        position: absolute;
-        top: 10px;
+        position: fixed;
         left: 10px;
+        top: 10px;
         font-size: 20px;
         cursor: pointer;
         background: none;
