--- a/angular-frontend/src/app/pages/navbar/navbar.component.html
+++ b/angular-frontend/src/app/pages/navbar/navbar.component.html
@@ -52,7 +52,7 @@
     </a>
 
     <a
-      (click)="navigateToDoctorSignin()"
+      (click)="navigateToPatientList()"
       class="nav-link"
       [class.active-link]="activeLink === '/patient-list'"
       (click)="closeNav()"
