patient profile page done

--- a/angular-frontend/src/app/pages/doctor-profile/doctor-profile.component.css
+++ b/angular-frontend/src/app/pages/doctor-profile/doctor-profile.component.css
@@ -86,11 +86,11 @@
 }
 
 .signout-button {
-    background-color: #5cb85c;
+    background-color: #29f529;
 }
 
 .delete-button {
-    background-color: #d9534f;
+    background-color: #f0140d;
 }
 
 .edit-button:hover {
