angular frontend final commit

--- a/angular-frontend/src/app/pages/patient-list/patient-list.component.css
+++ b/angular-frontend/src/app/pages/patient-list/patient-list.component.css
@@ -80,6 +80,7 @@ input {
         align-items: center;
         justify-content: center;
         padding-top: 0;
+        height: 100vh;
     }
 
     .list-container h1 {
