--- a/angular-frontend/src/app/pages/dashboard/dashboard.component.css
+++ b/angular-frontend/src/app/pages/dashboard/dashboard.component.css
@@ -128,6 +128,7 @@
 
 .dashboard-header a :hover {
             text-decoration: underline;
+            cursor: pointer;
         }
 
 .patient-table-container {
@@ -212,7 +213,7 @@
     .dashboard-container-three {
         width: auto;
         margin-left: 0;
-        margin-top: 20px;
+        margin-top: 40px;
         margin-bottom: 20px;
     }
 
