--- a/angular-frontend/src/app/pages/doctor-register/doctor-register.component.css
+++ b/angular-frontend/src/app/pages/doctor-register/doctor-register.component.css
@@ -72,10 +72,7 @@
      display: flex;
      align-items: flex-start;
      flex-direction: column;
-     padding-left: 20px,
  }
- 
-
 
  .footer-container{
     display: flex;
@@ -158,6 +155,7 @@ label {
           display: flex;
           width: 100%;
           border: none;
+          margin-left: 20px;
       }
 
   }
@@ -182,9 +180,12 @@ label {
       }
 
       .textField-container {
+       
           flex-direction: column;
       }
-
+    .textField-container>div {
+        padding: 0;
+    }
 
       .footer-container {
           flex-direction: column;
@@ -196,10 +197,14 @@ label {
 
     .header h1 {
          
-            font-size: 40px;
+            font-size: xx-large;
         }
 
     .file-input-text {
             font-size: 10px;
         }
+
+    .signup-button {
+        padding: 1px 25px;
+    }
   }
