add styles to react app

--- a/angular-frontend/src/app/pages/patient-register/patient-register.component.css
+++ b/angular-frontend/src/app/pages/patient-register/patient-register.component.css
@@ -65,6 +65,10 @@
         padding: 0;
     }
 
+     .register-patient h1 {
+        font-size: xx-large;
+     }
+
     .patient-container {
         flex-direction: column;
     }
