--- a/react-frontend/src/Components/TextFields.css
+++ b/react-frontend/src/Components/TextFields.css
@@ -70,3 +70,20 @@
          width: 320px;
     }
   }
+
+    @media (max-width: 300px) {
+
+      .medium-text-field{
+        width: 150px;
+        height: 20px;
+      }
+      .large-text-field {
+        width: 200px;
+        height: 20px;
+      }
+  
+      .password-input {
+        width: 200px;
+        height: 20px;
+      }
+    }
