--- a/react-frontend/src/Pages/DoctorRegister.css
+++ b/react-frontend/src/Pages/DoctorRegister.css
@@ -52,12 +52,12 @@
     padding-left: 20px,
   }
 
-  .containers {
+  .footer-container {
     display: flex;
-   
+    margin-top: 40px;
   }
   
-  .containers > div {
+  .footer-container > div {
     flex: 1;
   }
   
@@ -122,7 +122,9 @@
 
     .container-two{
       display: flex;
+      border: 0;
       width: 100%;
+      margin-left: 20px;
     }
 
   }
@@ -137,10 +139,6 @@
         display: none;
       }
 
-    .container-two{
-        width: auto;
-    }
-
     .header{
         align-items: center;
         justify-content: center;
@@ -151,7 +149,7 @@
         align-items: center;
       }
 
-   .containers{
+   .footer-container{
     flex-direction: column;
    }
     
