--- a/react-frontend/src/Pages/Navbar.css
+++ b/react-frontend/src/Pages/Navbar.css
@@ -5,12 +5,12 @@ body, html {
 }
 
 .navbar-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 20vw; 
-  max-width: 300px; 
-  position: relative;
+  position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 20vw;
+    max-width: 300px;
 }
   
   .navbar-container-one {
@@ -79,7 +79,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the transparency as needed */
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000; /* Set a high z-index to ensure it's above other elements */
   }
   
@@ -89,12 +89,6 @@ body, html {
   
   @media screen and (max-width: 1366px) {
 
-    .navbar-container {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      position: relative;
-    }
 
     .navbar-container-one{
       padding: 20px;
@@ -108,11 +102,9 @@ body, html {
 @media screen and (max-width: 768px) {
   .navbar-container {
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100vw;
-    position: relative;
-    z-index: 1001; 
+      flex-direction: column;
+      position: relative;
+      width: 0;
   }
 
   .toggle-nav-btn {
@@ -152,8 +144,14 @@ body, html {
 
   .navbar-container-two.visible {
     align-items: flex-start;
-    background-color: rgba(245, 213, 174, 0.8);
-    padding: 20px 0 0 20px;
+    padding: 0 0 0 20px;
     bottom: 0;
+  }
+}
+
+@media (max-width: 375px) {
+  .navbar-container-one.visible {
+    height: 25%;
+    padding-bottom: 20px;
   }
 }
