--- a/react-frontend/src/Pages/DoctorSignin.css
+++ b/react-frontend/src/Pages/DoctorSignin.css
@@ -1,188 +1,176 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .signin-container {
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
-    width: 100%;
-   
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 100%;
 }
 
 .signin-container-one {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 40%;
-    background-color: white;
-   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 40%;
+  background-color: white;
 }
 
-.welcome-meassage{
-    display: flex;
-    flex-direction: row;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    font-size:x-large;
+.welcome-meassage {
+  display: flex;
+  flex-direction: row;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: x-large;
 }
 
 .signin-container-one h1,
 .signin-container-one h1 {
-    margin: 0;
-    margin-right: 10px; 
+  margin: 0;
+  margin-right: 10px;
 }
-
 
 .signin-container-two {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 60%;
-    background-color: var(--primary-color);
-   
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 60%;
+  background-color: var(--primary-color);
 }
 
-.signin-header-link{
-    display: flex;
-    justify-content:flex-end;
-    align-items: center;
-    padding: 20px ;
+.signin-header-link {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 20px;
 }
 
-.create-account-heading{
-    color: white;
-    margin-right: 10px;
+.create-account-heading {
+  color: white;
+  margin-right: 10px;
 }
 
- .signin-header{
-    display: flex;
-    flex-direction: row;
-    font-size: 30px;
-    color: white;
-    margin-bottom: 40px;
-    
+.signin-header {
+  display: flex;
+  flex-direction: row;
+  font-size: 30px;
+  color: white;
+  margin-bottom: 40px;
 }
 
 .signin-header h1:first-child {
-    margin-right: 10px; 
+  margin-right: 10px;
 }
 
-.signin-body{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
+.signin-body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
-.signin-textfield-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-  
-} 
-
-.Signin-button-section{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    padding: 75px;
+.signin-textfield-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
 }
 
-.signin-button{
-    color: var(--primary-color);
-    background-color: white;
-    padding: 0 50px 0 50px;
-    border: 0;
-    border-radius: 10px;
-    font-size:medium;
+.Signin-button-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 75px;
 }
 
-.signin-button:hover{
-    background-color: rgb(185, 182, 182);
+.signin-button {
+  color: var(--primary-color);
+  background-color: white;
+  padding: 0 50px 0 50px;
+  border: 0;
+  border-radius: 10px;
+  font-size: medium;
+}
+
+.signin-button:hover {
+  background-color: rgb(185, 182, 182);
 }
 
 @media screen and (max-width: 1366px) {
-    .signin-container {
-        display: flex;
-        flex-direction: column;
-       
-      }
-
-    .signin-container-one {
-      display: none;
-    }
-
-    .signin-container-two{
-     
-      width: 100%;
-    }
-
-    .signin-header{
-        font-size: 30px;
-    }
-
-    .signin-body{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .signin-button{
-        font-size: small;
-    }
-
+  .signin-container {
+    display: flex;
+    flex-direction: column;
   }
-  
-  
-  @media screen and (max-width: 768px) {
-    .signin-container {
-      flex-direction: column;
-    }
 
-    .signin-container-one  {
-        display: none;
-      }
-
-    .signin-container-two{
-        width: 100%;
-    }
-
-    .signin-header{
-        font-size: 20px;
-    }
-    .signin-body{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .signin-button{
-        font-size: small;
-        padding: auto;
-    }
-
-  } 
-
-  @media (max-width: 375px) {
-
-      .signin-header-link h3 {
-          font-size: medium;
-      }
-
-      .signin-header h1 {
-          font-size: larger;
-      }
-
-      .signin-button {
-          padding: 0 30px 0 30px;
-      }
-
-      .signin-button h3 {
-          font-size: small;
-      }
+  .signin-container-one {
+    display: none;
   }
+
+  .signin-container-two {
+    width: 100%;
+  }
+
+  .signin-header {
+    font-size: 30px;
+  }
+
+  .signin-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .signin-button {
+    font-size: small;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .signin-container {
+    flex-direction: column;
+  }
+
+  .signin-container-one {
+    display: none;
+  }
+
+  .signin-container-two {
+    width: 100%;
+  }
+
+  .signin-header {
+    font-size: 20px;
+  }
+  .signin-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .signin-button {
+    font-size: small;
+    padding: auto;
+  }
+}
+
+@media (max-width: 375px) {
+  .signin-header-link h3 {
+    font-size: medium;
+  }
+
+  .signin-header h1 {
+    font-size: larger;
+  }
+
+  .signin-button {
+    padding: 0 30px 0 30px;
+  }
+
+  .signin-button h3 {
+    font-size: small;
+  }
+}
