--- a/react-frontend/src/Pages/Navbar.css
+++ b/react-frontend/src/Pages/Navbar.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -6,105 +7,102 @@ body, html {
 
 .navbar-container {
   position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 20vw;
-    max-width: 300px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 20vw;
+  max-width: 300px;
 }
-  
+
+.navbar-container-one {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-color);
+  height: 30%;
+}
+
+.nav-image {
+  height: 100px;
+  width: 100px;
+}
+
+.doctor-details {
+  color: rgb(255, 255, 255);
+  margin-bottom: 0;
+}
+
+.navbar-container-two {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #f5d5ae;
+  height: 70%;
+  padding: 20px 0 0 50px;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: rgb(35, 35, 35);
+  margin: 20px 0;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  transition: color 0.3s ease-in-out;
+}
+
+.nav-link:hover {
+  color: rgb(0, 0, 0);
+  transform: scale(1.05);
+}
+
+.nav-link span {
+  margin-right: 10px;
+}
+
+.nav-link svg {
+  margin-right: 10px;
+}
+
+.nav-link.active-link {
+  color: var(--primary-color);
+}
+
+.toggle-nav-btn {
+  display: none;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000; /* Set a high z-index to ensure it's above other elements */
+}
+
+.overlay.visible {
+  display: block;
+}
+
+@media screen and (max-width: 1366px) {
   .navbar-container-one {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--primary-color);
-    height: 30%;
+    padding: 20px;
   }
-
-  .nav-image{
-    height: 100px;
-    width: 100px;
-  }
-  
-  .doctor-details {
-    color: rgb(255, 255, 255);
-    margin-bottom: 0;
-  }
-  
   .navbar-container-two {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background-color: #F5D5AE;
-    height: 70%;
-    padding: 20px 0 0 50px;
+    padding: 30px;
   }
-  
-  .nav-link {
-    text-decoration: none;
-    color: rgb(35, 35, 35);
-    margin: 20px 0;
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-    transition: color 0.3s ease-in-out;
-  }
-  
-  .nav-link:hover {
-    color: rgb(0, 0, 0); 
-   transform: scale(1.05);
-  }
-  
-  .nav-link span {
-    margin-right: 10px;
-  }
-  
-  .nav-link svg {
-    margin-right: 10px;
-  }
-
-  .nav-link.active-link {
-    color: var(--primary-color);
-  }  
-
-  .toggle-nav-btn {
-    display: none; 
-  }
-  
-  .overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000; /* Set a high z-index to ensure it's above other elements */
-  }
-  
-  .overlay.visible {
-    display: block;
-  }
-  
-  @media screen and (max-width: 1366px) {
-
-
-    .navbar-container-one{
-      padding: 20px;
-    }
-    .navbar-container-two {
-      padding: 30px;
-    }
-  }
-
+}
 
 @media screen and (max-width: 768px) {
   .navbar-container {
     display: flex;
-      flex-direction: column;
-      position: relative;
-      width: 0;
+    flex-direction: column;
+    position: relative;
+    width: 0;
   }
 
   .toggle-nav-btn {
@@ -132,7 +130,7 @@ body, html {
     display: flex;
     position: fixed;
     width: 100vw;
-    z-index: 1003; 
+    z-index: 1003;
   }
 
   .navbar-container-one.visible {
