--- a/react-frontend/src/Pages/PatientRegister.css
+++ b/react-frontend/src/Pages/PatientRegister.css
@@ -1,93 +1,84 @@
-.register-patient{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    padding: 10px;
-    
+.register-patient {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  padding: 10px;
 }
 
-.register-patient h1{
-    color: var(--primary-color);
-    padding: 10px;
-    font-size:xxx-large;
-    margin: 0;
+.register-patient h1 {
+  color: var(--primary-color);
+  padding: 10px;
+  font-size: xxx-large;
+  margin: 0;
 }
 
-.patient-container{
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
+.patient-container {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
 }
 
-.patient-container-one{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    width: 50%;
-    padding-left: 100px;
+.patient-container-one {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+  padding-left: 100px;
 }
 
-.register-button{
-    background-color: var(--primary-color);
-    color: white;
-    padding: 1px 100px 1px 100px;
-    border: 0;
-    border-radius: 10px;
+.register-button {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1px 100px 1px 100px;
+  border: 0;
+  border-radius: 10px;
 }
-.register-button:hover{
-    background-color: #903e00; 
-  }
+.register-button:hover {
+  background-color: #903e00;
+}
 
 @media screen and (max-width: 1366px) {
-  
-    .patient-container-one{
-        width: 100%;
-        padding-left: 50px;
-    }
-   
+  .patient-container-one {
+    width: 100%;
+    padding-left: 50px;
   }
-  
-  @media screen and (max-width: 768px) {
+}
 
-    .register-patient{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0;
-        margin-top: 350px;
-    }
-
-    .register-patient h1 {
-              font-size: xxx-large;
-          }
-
-    .patient-container {
-      flex-direction: column;
-    }
-
-    .patient-container-one{
-        width: 100%;
-        padding-left: 0;
-    }
-    
+@media screen and (max-width: 768px) {
+  .register-patient {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:  10px;
   }
 
-   @media (max-width: 375px) {
-    .register-patient {
-        margin-top: 420px;
-    }
+  .register-patient h1 {
+    font-size: xxx-large;
+  }
 
-     .register-patient h1 {
-            font-size: xx-large;
-        }
+  .patient-container {
+    flex-direction: column;
+  }
 
-     .patient-container-one {
-        margin-left: 120px;
-     }
+  .patient-container-one {
+    width: 100%;
+    padding-left: 0;
+  }
+}
 
-     .register-button {
+@media (max-width: 375px) {
+  .register-patient h1 {
+    font-size: xx-large;
+  }
+
+  .patient-container-one {
+    margin-left: 120px;
+  }
+
+  .register-button {
     padding: 1px 50px 1px 50px;
-     }
-   }
+  }
+}
