--- a/angular-frontend/src/app/pages/doctor-register/doctor-register.component.html
+++ b/angular-frontend/src/app/pages/doctor-register/doctor-register.component.html
@@ -14,94 +14,115 @@
       <h1>Doctor Sign Up</h1>
     </div>
 
-    <div class="textField-container">
-      <div class="textField-container-one">
-        <p>Full Name:</p>
-        <app-textfields type="text" size="lg" placeholder="Enter your name" />
-        <br />
-        <p>Doctor Id:</p>
-        <app-textfields
-          type="text"
-          size="lg"
-          placeholder="Enter your id"
-        /><br />
-        <p>Speciality:</p>
-        <app-textfields
-          type="text"
-          size="lg"
-          placeholder="Enter speciality"
-        /><br />
-      </div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="textField-container">
+        <div class="textField-container-one">
+          <p>Full Name:</p>
+          <app-textfields
+            type="text"
+            size="lg"
+            placeholder="Enter your name"
+            [(value)]="doctorData.fullName"
+          ></app-textfields>
+          <br />
+          <p>Doctor Id:</p>
+          <app-textfields
+            type="text"
+            size="lg"
+            placeholder="Enter your id"
+            [(value)]="doctorData.doctorId"
+          ></app-textfields
+          ><br />
+          <p>Speciality:</p>
+          <app-textfields
+            type="text"
+            size="lg"
+            placeholder="Enter speciality"
+            [(value)]="doctorData.speciality"
+          ></app-textfields>
+          <br />
+        </div>
 
-      <div class="textField-container-one">
-        <p>Email:</p>
-        <app-textfields
-          type="text"
-          size="lg"
-          placeholder="Enter email address"
-        /><br />
-        <p>Mobile Number:</p>
-        <app-textfields
-          type="text"
-          size="lg"
-          placeholder="Enter mobile number"
-        /><br />
-        <p>Hospital Name:</p>
-        <app-textfields
-          type="text"
-          size="lg"
-          placeholder="Enter hospital name"
-        /><br />
-      </div>
-    </div>
-
-    <div class="textField-container">
-      <div class="textField-container-one">
-        <p>Password:</p>
-        <app-textfields
-          type="password"
-          size="lg"
-          placeholder="Enter Password"
-        /><br />
-      </div>
-
-      <div class="textField-container-one">
-        <p>Confirm Password:</p>
-        <app-textfields
-          type="password"
-          size="lg"
-          placeholder="Re-enter Password"
-        /><br />
-      </div>
-    </div>
-
-    <div class="footer-container">
-      <div class="profile-section">
-        <ng-container *ngIf="profilePic">
-          <div>
-            <div class="profile-pic-container">
-              <img [src]="profilePic" alt="Profile" class="profile-pic" />
-            </div>
-          </div>
-        </ng-container>
-        <div>
-          <div class="label-container">
-            <input
-              type="file"
-              id="fileInput"
-              accept="image/*"
-              (change)="handleFileChange($event)"
-            />
-            <span class="file-input-text"> Choose profile picture </span>
-          </div>
+        <div class="textField-container-one">
+          <p>Email:</p>
+          <app-textfields
+            type="text"
+            size="lg"
+            placeholder="Enter email address"
+            [(value)]="doctorData.email"
+          ></app-textfields
+          ><br />
+          <p>Mobile Number:</p>
+          <app-textfields
+            type="text"
+            size="lg"
+            placeholder="Enter mobile number"
+            [(value)]="doctorData.mobileNumber"
+          ></app-textfields>
+          <br />
+          <p>Hospital Name:</p>
+          <app-textfields
+            type="text"
+            size="lg"
+            placeholder="Enter hospital name"
+            [(value)]="doctorData.hospitalName"
+          ></app-textfields>
+          <br />
         </div>
       </div>
 
-      <div class="button-section">
-        <button class="signup-button">
-          <h2>Sign Up</h2>
-        </button>
+      <div class="textField-container">
+        <div class="textField-container-one">
+          <p>Password:</p>
+          <app-textfields
+            type="password"
+            size="lg"
+            placeholder="Enter Password"
+            [(value)]="doctorData.password"
+          ></app-textfields>
+          <br />
+        </div>
+
+        <div class="textField-container-one">
+          <p>Confirm Password:</p>
+          <app-textfields
+            type="password"
+            size="lg"
+            placeholder="Re-enter Password"
+            [(value)]="doctorData.confirmPassword"
+          ></app-textfields
+          ><br />
+        </div>
       </div>
-    </div>
+
+      <div class="footer-container">
+        <div class="profile-section">
+          <ng-container *ngIf="profilePic">
+            <div>
+              <div class="profile-pic-container">
+                <img [src]="profilePic" alt="Profile" class="profile-pic" />
+              </div>
+            </div>
+          </ng-container>
+          <div>
+            <div class="label-container">
+              <input
+                type="file"
+                id="fileInput"
+                accept="image/*"
+                (change)="handleFileChange($event)"
+              />
+              <span class="file-input-text"> Choose profile picture </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="button-section">
+          <button class="signup-button" type="submit">
+            <h2>Sign Up</h2>
+          </button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
