--- a/react-frontend/src/Components/TextFields.css
+++ b/react-frontend/src/Components/TextFields.css
@@ -6,14 +6,17 @@
     border: 0;
   }
   
-  .medium-text-field {
-    width: 200px;
-    height: 25px;
-    /* background-color: #eeeeee; */
-    border-radius: 5px;
-    border: 0;
-    padding: 5px;
-  }
+ .medium-text-field {
+  width: 300px;
+  height: 25px;
+  /* background-color: #eeeeee; */
+  border-radius: 5px;
+  border: 0;
+  padding: 5px;
+   font-size: 20px;
+   font-family: 'Times New Roman', Times, serif;
+   font-weight: 500;
+ }
   
   .large-text-field {
     width: 400px;
