add some style to snomed list

--- a/angular-frontend/src/app/pages/diagnosis-search/diagnosis-search.component.html
+++ b/angular-frontend/src/app/pages/diagnosis-search/diagnosis-search.component.html
@@ -7,7 +7,7 @@
       placeholder="Search Diseases"
     />
 
-    <ul *ngIf="isListVisible">
+    <ul class="search-list" *ngIf="isListVisible">
       <li
         *ngFor="let diagnosis of diagnosisList"
         (click)="handleDiagnosisSelect(diagnosis)"
