--- a/angular-frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/angular-frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-container">
   <div class="dashboard-container-one">
     <div>
-      <h1>Good morning, Dr. xxxxx</h1>
+      <h1>Good morning, Dr. Nirmal Kapilarathne</h1>
       <p>
         You have 7 patients remaining today! <br />
         Remember to record your details today.
