--- a/angular-frontend/src/app/pages/diagnosis-search/diagnosis-search.component.css
+++ b/angular-frontend/src/app/pages/diagnosis-search/diagnosis-search.component.css
@@ -58,3 +58,16 @@
   flex: 0 0 calc(33.33% - 10px);
   max-width: calc(33.33% - 10px);
 }
+
+@media screen and (max-width: 492px) {
+  .diagnosis-search-container input[type="text"] {
+    width: 350px;
+  }
+}
+
+@media (max-width: 300px) {
+  .diagnosis-search-container input[type="text"] {
+    width: 200px;
+    height: 20px;
+  }
+}
